--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ license_files =
     licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
     licenses/LICENSE_moby_moby
     licenses/LICENSE_textmate_diff.tmbundle
+    licenses/LICENSE_textmate_git.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_yaml.tmbundle
@@ -59,6 +60,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.rust.json
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.yaml.json
+    share/babi/grammar_v1/text.git-commit.json
+    share/babi/grammar_v1/text.git-rebase.json
     share/babi/grammar_v1/text.html.basic.json
     share/babi/grammar_v1/text.html.derivative.json
     share/babi/grammar_v1/text.html.markdown.json
