Add syntax for go

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ license_files =
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-shellscript
     licenses/LICENSE_fadeevab_make.tmbundle
+    licenses/LICENSE_jeff-hykin_better-go-syntax
     licenses/LICENSE_jeff-hykin_cpp-textmate-grammar
     licenses/LICENSE_lingua-pupuli_puppet-editor-syntax
     licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
@@ -48,6 +49,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.css.json
     share/babi/grammar_v1/source.diff.json
     share/babi/grammar_v1/source.dockerfile.json
+    share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.ini.json
     share/babi/grammar_v1/source.json.json
     share/babi/grammar_v1/source.makefile.json
