--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ license_files =
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-xml
     licenses/LICENSE_atom_language-css
+    licenses/LICENSE_atom_language-sass
     licenses/LICENSE_atom_language-shellscript
     licenses/LICENSE_fadeevab_make.tmbundle
     licenses/LICENSE_jeff-hykin_better-go-syntax
@@ -47,6 +48,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
     share/babi/grammar_v1/source.css.json
+    share/babi/grammar_v1/source.css.scss.json
     share/babi/grammar_v1/source.diff.json
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.go.json
@@ -60,6 +62,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.python.json
     share/babi/grammar_v1/source.regexp.python.json
     share/babi/grammar_v1/source.rust.json
+    share/babi/grammar_v1/source.sass.json
+    share/babi/grammar_v1/source.sassdoc.json
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.yaml.json
     share/babi/grammar_v1/text.git-commit.json
