Add typescript support

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ license_files =
     licenses/LICENSE_jeff-hykin_better-go-syntax
     licenses/LICENSE_jeff-hykin_cpp-textmate-grammar
     licenses/LICENSE_lingua-pupuli_puppet-editor-syntax
+    licenses/LICENSE_microsoft_TypeScript-TmLanguage
     licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
     licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
     licenses/LICENSE_moby_moby
@@ -65,6 +66,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.sass.json
     share/babi/grammar_v1/source.sassdoc.json
     share/babi/grammar_v1/source.shell.json
+    share/babi/grammar_v1/source.ts.json
+    share/babi/grammar_v1/source.tsx.json
     share/babi/grammar_v1/source.yaml.json
     share/babi/grammar_v1/text.git-commit.json
     share/babi/grammar_v1/text.git-rebase.json
