Add js / jsx derived from tsx

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.ini.json
+    share/babi/grammar_v1/source.js.json
+    share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
     share/babi/grammar_v1/source.makefile.json
     share/babi/grammar_v1/source.objc.json
