Add ruby syntax highlighting

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ license_files =
     licenses/LICENSE_textmate_git.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
+    licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_yaml.tmbundle
 classifiers =
     License :: OSI Approved :: MIT License
@@ -64,6 +65,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
     share/babi/grammar_v1/source.regexp.python.json
+    share/babi/grammar_v1/source.ruby.gemfile.json
+    share/babi/grammar_v1/source.ruby.json
     share/babi/grammar_v1/source.rust.json
     share/babi/grammar_v1/source.sass.json
     share/babi/grammar_v1/source.sassdoc.json
@@ -75,6 +78,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/text.git-rebase.json
     share/babi/grammar_v1/text.html.basic.json
     share/babi/grammar_v1/text.html.derivative.json
+    share/babi/grammar_v1/text.html.erb.json
     share/babi/grammar_v1/text.html.markdown.json
     share/babi/grammar_v1/text.shell-session.json
     share/babi/grammar_v1/text.xml.json
