Add highlighting for sql

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ license_files =
     licenses/LICENSE_PowerShell_EditorSyntax
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-xml
+    licenses/LICENSE_asottile_vscode-mssql
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-sass
     licenses/LICENSE_atom_language-shellscript
@@ -24,6 +25,7 @@ license_files =
     licenses/LICENSE_microsoft_TypeScript-TmLanguage
     licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
     licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
+    licenses/LICENSE_microsoft_vscode-mssql
     licenses/LICENSE_moby_moby
     licenses/LICENSE_textmate_diff.tmbundle
     licenses/LICENSE_textmate_git.tmbundle
@@ -71,6 +73,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.sass.json
     share/babi/grammar_v1/source.sassdoc.json
     share/babi/grammar_v1/source.shell.json
+    share/babi/grammar_v1/source.sql.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
     share/babi/grammar_v1/source.yaml.json
