--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ license_file = LICENSE
 license_files =
     licenses/LICENSE_MagicStack_MagicPython
     licenses/LICENSE_PowerShell_EditorSyntax
+    licenses/LICENSE_Varriount_NimLime
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-xml
     licenses/LICENSE_asottile_vscode-mssql
@@ -61,6 +62,10 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
     share/babi/grammar_v1/source.makefile.json
+    share/babi/grammar_v1/source.nim.comment.json
+    share/babi/grammar_v1/source.nim.json
+    share/babi/grammar_v1/source.nim_filter.json
+    share/babi/grammar_v1/source.nimcfg.json
     share/babi/grammar_v1/source.objc.json
     share/babi/grammar_v1/source.objcpp.json
     share/babi/grammar_v1/source.powershell.json
