--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,8 @@ resources:
 
 jobs:
 - template: job--pre-commit.yml@asottile
+- template: job--python-tox.yml@asottile
+  parameters:
+    toxenvs: [py38]
+    os: linux
+    coverage: false
