--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ license_files =
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_yaml.tmbundle
+    licenses/LICENSE_vscode-restructuredtext_vscode-restructuredtext
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
@@ -85,6 +86,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/text.html.derivative.json
     share/babi/grammar_v1/text.html.erb.json
     share/babi/grammar_v1/text.html.markdown.json
+    share/babi/grammar_v1/text.restructuredtext.json
     share/babi/grammar_v1/text.shell-session.json
     share/babi/grammar_v1/text.xml.json
     share/babi/grammar_v1/text.xml.xsl.json
