Add toml support

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ license_files =
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
+    licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_textmate_yaml.tmbundle
     licenses/LICENSE_vscode-restructuredtext_vscode-restructuredtext
 classifiers =
@@ -77,6 +78,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.sassdoc.json
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.sql.json
+    share/babi/grammar_v1/source.toml.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
     share/babi/grammar_v1/source.yaml.json
