add syntax highlighting for terraform

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ license_files =
     licenses/LICENSE_atom_language-sass
     licenses/LICENSE_atom_language-shellscript
     licenses/LICENSE_fadeevab_make.tmbundle
+    licenses/LICENSE_hashicorp_vscode-terraform
     licenses/LICENSE_jeff-hykin_better-go-syntax
     licenses/LICENSE_jeff-hykin_cpp-textmate-grammar
     licenses/LICENSE_lingua-pupuli_puppet-editor-syntax
@@ -50,6 +51,7 @@ python_requires = >=3.6.1
 
 [options.data_files]
 share/babi/grammar_v1 =
+    share/babi/grammar_v1/scope.terraform.json
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
