Added Java support

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ license_files =
     licenses/LICENSE_jeff-hykin_cpp-textmate-grammar
     licenses/LICENSE_lingua-pupuli_puppet-editor-syntax
     licenses/LICENSE_microsoft_TypeScript-TmLanguage
+    licenses/LICENSE_microsoft_vscode
     licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
     licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
     licenses/LICENSE_microsoft_vscode-mssql
@@ -61,6 +62,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.ini.json
+    share/babi/grammar_v1/source.java.json
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
