fix cpp for inline assembly

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,8 @@ python_requires = >=3.6.1
 [options.data_files]
 share/babi/grammar_v1 =
     share/babi/grammar_v1/scope.terraform.json
+    share/babi/grammar_v1/source.arm.json
+    share/babi/grammar_v1/source.asm.json
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
@@ -85,6 +87,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.toml.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
+    share/babi/grammar_v1/source.x86.json
+    share/babi/grammar_v1/source.x86_64.json
     share/babi/grammar_v1/source.yaml.json
     share/babi/grammar_v1/text.git-commit.json
     share/babi/grammar_v1/text.git-rebase.json
