--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ license_files =
     licenses/LICENSE_microsoft_vscode-JSON.tmLanguage
     licenses/LICENSE_microsoft_vscode-markdown-tm-grammar
     licenses/LICENSE_microsoft_vscode-mssql
+    licenses/LICENSE_mmims_language-batchfile
     licenses/LICENSE_moby_moby
     licenses/LICENSE_pragmagic_vscode-nim
     licenses/LICENSE_textmate_diff.tmbundle
@@ -56,6 +57,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/scope.terraform.json
     share/babi/grammar_v1/source.arm.json
     share/babi/grammar_v1/source.asm.json
+    share/babi/grammar_v1/source.batchfile.json
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
