add bazelrc syntax highlighting

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ license_files =
     licenses/LICENSE_moby_moby
     licenses/LICENSE_pragmagic_vscode-nim
     licenses/LICENSE_scala_vscode-scala-syntax
+    licenses/LICENSE_stackb_bazel-stack-vscode
     licenses/LICENSE_textmate_diff.tmbundle
     licenses/LICENSE_textmate_git.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
@@ -59,6 +60,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.arm.json
     share/babi/grammar_v1/source.asm.json
     share/babi/grammar_v1/source.batchfile.json
+    share/babi/grammar_v1/source.bazelrc.json
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
