add syntax for scala

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ license_files =
     licenses/LICENSE_mmims_language-batchfile
     licenses/LICENSE_moby_moby
     licenses/LICENSE_pragmagic_vscode-nim
+    licenses/LICENSE_scala_vscode-scala-syntax
     licenses/LICENSE_textmate_diff.tmbundle
     licenses/LICENSE_textmate_git.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
@@ -85,6 +86,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.rust.json
     share/babi/grammar_v1/source.sass.json
     share/babi/grammar_v1/source.sassdoc.json
+    share/babi/grammar_v1/source.scala.json
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.sql.json
     share/babi/grammar_v1/source.toml.json
