add highlighting for bazel + starlark

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.arm.json
     share/babi/grammar_v1/source.asm.json
     share/babi/grammar_v1/source.batchfile.json
+    share/babi/grammar_v1/source.bazel.json
     share/babi/grammar_v1/source.bazelrc.json
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
@@ -91,6 +92,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.scala.json
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.sql.json
+    share/babi/grammar_v1/source.starlark.json
     share/babi/grammar_v1/source.toml.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
