--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ license_files =
     licenses/LICENSE_MagicStack_MagicPython
     licenses/LICENSE_PowerShell_EditorSyntax
     licenses/LICENSE_asottile_atom-language-rust
+    licenses/LICENSE_asottile_language-shellscript
     licenses/LICENSE_asottile_language-xml
     licenses/LICENSE_asottile_yaml.tmbundle
     licenses/LICENSE_atom_language-css
