add support for highlighting dart

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ author_email = asottile@umich.edu
 license = MIT
 license_file = LICENSE
 license_files =
+    licenses/LICENSE_Dart-Code_Dart-Code
     licenses/LICENSE_MagicStack_MagicPython
     licenses/LICENSE_PowerShell_EditorSyntax
     licenses/LICENSE_asottile_atom-language-rust
@@ -68,6 +69,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.cpp.json
     share/babi/grammar_v1/source.css.json
     share/babi/grammar_v1/source.css.scss.json
+    share/babi/grammar_v1/source.dart.json
     share/babi/grammar_v1/source.diff.json
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.go.json
