--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,6 @@ license_files =
     licenses/LICENSE_asottile_yaml.tmbundle
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-sass
-    licenses/LICENSE_atom_language-shellscript
     licenses/LICENSE_fadeevab_make.tmbundle
     licenses/LICENSE_hashicorp_vscode-terraform
     licenses/LICENSE_jeff-hykin_better-go-syntax
@@ -41,7 +40,7 @@ license_files =
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
-    licenses/LICENSE_vscode-restructuredtext_vscode-restructuredtext
+    licenses/LICENSE_trond-snekvik_vscode-rst
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
@@ -87,6 +86,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
     share/babi/grammar_v1/source.regexp.python.json
+    share/babi/grammar_v1/source.rst.json
     share/babi/grammar_v1/source.ruby.gemfile.json
     share/babi/grammar_v1/source.ruby.json
     share/babi/grammar_v1/source.rust.json
@@ -108,7 +108,6 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/text.html.derivative.json
     share/babi/grammar_v1/text.html.erb.json
     share/babi/grammar_v1/text.html.markdown.json
-    share/babi/grammar_v1/text.restructuredtext.json
     share/babi/grammar_v1/text.shell-session.json
     share/babi/grammar_v1/text.xml.json
     share/babi/grammar_v1/text.xml.xsl.json
