--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ license_files =
     licenses/LICENSE_Dart-Code_Dart-Code
     licenses/LICENSE_MagicStack_MagicPython
     licenses/LICENSE_PowerShell_EditorSyntax
+    licenses/LICENSE_WhereIsX_vscode-crystal-lang
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-shellscript
     licenses/LICENSE_asottile_language-xml
@@ -70,6 +71,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.c.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
+    share/babi/grammar_v1/source.crystal.json
     share/babi/grammar_v1/source.css.json
     share/babi/grammar_v1/source.css.scss.json
     share/babi/grammar_v1/source.dart.json
