add support for perl grammar

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ license_files =
     licenses/LICENSE_textmate_git.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
+    licenses/LICENSE_textmate_perl.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_trond-snekvik_vscode-rst
@@ -88,6 +89,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.nimble.json
     share/babi/grammar_v1/source.objc.json
     share/babi/grammar_v1/source.objcpp.json
+    share/babi/grammar_v1/source.perl.6.json
+    share/babi/grammar_v1/source.perl.json
     share/babi/grammar_v1/source.powershell.json
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
