--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ license_files =
     licenses/LICENSE_stackb_bazel-stack-vscode
     licenses/LICENSE_textmate_diff.tmbundle
     licenses/LICENSE_textmate_git.tmbundle
+    licenses/LICENSE_textmate_haskell.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_perl.tmbundle
@@ -78,6 +79,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.diff.json
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.go.json
+    share/babi/grammar_v1/source.haskell.json
     share/babi/grammar_v1/source.ini.json
     share/babi/grammar_v1/source.java.json
     share/babi/grammar_v1/source.js.json
