add support for lua grammar

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ license_files =
     licenses/LICENSE_textmate_haskell.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
+    licenses/LICENSE_textmate_lua.tmbundle
     licenses/LICENSE_textmate_perl.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
@@ -85,6 +86,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
+    share/babi/grammar_v1/source.lua.json
     share/babi/grammar_v1/source.makefile.json
     share/babi/grammar_v1/source.nim.json
     share/babi/grammar_v1/source.nimble.json
