Added support for r language

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ license_files =
     licenses/LICENSE_textmate_ini.tmbundle
     licenses/LICENSE_textmate_lua.tmbundle
     licenses/LICENSE_textmate_perl.tmbundle
+    licenses/LICENSE_textmate_r.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_trond-snekvik_vscode-rst
@@ -97,6 +98,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.powershell.json
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
+    share/babi/grammar_v1/source.r.json
     share/babi/grammar_v1/source.regexp.python.json
     share/babi/grammar_v1/source.rst.json
     share/babi/grammar_v1/source.ruby.gemfile.json
