Added Swift language support

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ license_files =
     licenses/LICENSE_textmate_perl.tmbundle
     licenses/LICENSE_textmate_r.tmbundle
     licenses/LICENSE_textmate_ruby.tmbundle
+    licenses/LICENSE_textmate_swift.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_trond-snekvik_vscode-rst
 classifiers =
@@ -110,6 +111,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.shell.json
     share/babi/grammar_v1/source.sql.json
     share/babi/grammar_v1/source.starlark.json
+    share/babi/grammar_v1/source.swift.json
     share/babi/grammar_v1/source.toml.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
