add support for TeX/LaTeX grammar

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ license_files =
     licenses/LICENSE_textmate_haskell.tmbundle
     licenses/LICENSE_textmate_html.tmbundle
     licenses/LICENSE_textmate_ini.tmbundle
+    licenses/LICENSE_textmate_latex.tmbundle
     licenses/LICENSE_textmate_lua.tmbundle
     licenses/LICENSE_textmate_perl.tmbundle
     licenses/LICENSE_textmate_r.tmbundle
@@ -125,6 +126,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/text.html.erb.json
     share/babi/grammar_v1/text.html.markdown.json
     share/babi/grammar_v1/text.shell-session.json
+    share/babi/grammar_v1/text.tex.json
+    share/babi/grammar_v1/text.tex.latex.json
     share/babi/grammar_v1/text.xml.json
     share/babi/grammar_v1/text.xml.xsl.json
 
