Added C# language support

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ license_files =
     licenses/LICENSE_asottile_yaml.tmbundle
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-sass
+    licenses/LICENSE_dotnet_csharp-tmLanguage
     licenses/LICENSE_hashicorp_vscode-terraform
     licenses/LICENSE_jeff-hykin_better-c-syntax
     licenses/LICENSE_jeff-hykin_better-cpp-syntax
@@ -76,6 +77,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
     share/babi/grammar_v1/source.crystal.json
+    share/babi/grammar_v1/source.cs.json
     share/babi/grammar_v1/source.css.json
     share/babi/grammar_v1/source.css.scss.json
     share/babi/grammar_v1/source.dart.json
