--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ license_files =
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-sass
     licenses/LICENSE_hashicorp_vscode-terraform
+    licenses/LICENSE_ionide_ionide-fsgrammar
     licenses/LICENSE_jeff-hykin_better-c-syntax
     licenses/LICENSE_jeff-hykin_better-cpp-syntax
     licenses/LICENSE_jeff-hykin_better-go-syntax
@@ -81,6 +82,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.dart.json
     share/babi/grammar_v1/source.diff.json
     share/babi/grammar_v1/source.dockerfile.json
+    share/babi/grammar_v1/source.fsharp.json
     share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.haskell.json
     share/babi/grammar_v1/source.ini.json
