Add php support

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ license_files =
     licenses/LICENSE_asottile_make.tmbundle
     licenses/LICENSE_asottile_yaml.tmbundle
     licenses/LICENSE_atom_language-css
+    licenses/LICENSE_atom_language-php
     licenses/LICENSE_atom_language-sass
     licenses/LICENSE_hashicorp_vscode-terraform
     licenses/LICENSE_ionide_ionide-fsgrammar
@@ -98,6 +99,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.objcpp.json
     share/babi/grammar_v1/source.perl.6.json
     share/babi/grammar_v1/source.perl.json
+    share/babi/grammar_v1/source.php.json
     share/babi/grammar_v1/source.powershell.json
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
