--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ license_files =
     licenses/LICENSE_microsoft_vscode-mssql
     licenses/LICENSE_mmims_language-batchfile
     licenses/LICENSE_moby_moby
+    licenses/LICENSE_nishtahir_language-kotlin
     licenses/LICENSE_pragmagic_vscode-nim
     licenses/LICENSE_scala_vscode-scala-syntax
     licenses/LICENSE_stackb_bazel-stack-vscode
@@ -95,6 +96,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
+    share/babi/grammar_v1/source.kotlin.json
     share/babi/grammar_v1/source.lua.json
     share/babi/grammar_v1/source.makefile.json
     share/babi/grammar_v1/source.nim.json
