--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ license_files =
     licenses/LICENSE_atom_language-php
     licenses/LICENSE_atom_language-sass
     licenses/LICENSE_dotnet_csharp-tmLanguage
+    licenses/LICENSE_fixterjake_vscode-kotlin
     licenses/LICENSE_hashicorp_vscode-terraform
     licenses/LICENSE_ionide_ionide-fsgrammar
     licenses/LICENSE_jeff-hykin_better-c-syntax
@@ -93,6 +94,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
+    share/babi/grammar_v1/source.kotlin.json
     share/babi/grammar_v1/source.lua.json
     share/babi/grammar_v1/source.makefile.json
     share/babi/grammar_v1/source.nim.json
