--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ classifiers =
     Programming Language :: Python :: Implementation :: PyPy
 
 [options]
+py_modules = babi_grammars
 python_requires = >=3.7
 
 [options.data_files]
