add highlighting of pest files

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ license_files =
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-shellscript
     licenses/LICENSE_asottile_language-xml
+    licenses/LICENSE_asottile_pest-Syntax-Highlighting-for-vscode
     licenses/LICENSE_asottile_yaml.tmbundle
     licenses/LICENSE_atom_language-css
     licenses/LICENSE_atom_language-php
@@ -101,6 +102,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.objcpp.json
     share/babi/grammar_v1/source.perl.6.json
     share/babi/grammar_v1/source.perl.json
+    share/babi/grammar_v1/source.pestfile.json
     share/babi/grammar_v1/source.php.json
     share/babi/grammar_v1/source.powershell.json
     share/babi/grammar_v1/source.puppet.json
