--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ license_files =
     licenses/LICENSE_PowerShell_EditorSyntax
     licenses/LICENSE_WhereIsX_vscode-crystal-lang
     licenses/LICENSE_Xoronic_pest-Syntax-Highlighting-for-vscode
+    licenses/LICENSE_alefragnani_vscode-language-pascal
     licenses/LICENSE_asottile_atom-language-rust
     licenses/LICENSE_asottile_language-shellscript
     licenses/LICENSE_asottile_language-xml
@@ -100,6 +101,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.nimble.json
     share/babi/grammar_v1/source.objc.json
     share/babi/grammar_v1/source.objcpp.json
+    share/babi/grammar_v1/source.pascal.json
     share/babi/grammar_v1/source.perl.6.json
     share/babi/grammar_v1/source.perl.json
     share/babi/grammar_v1/source.pestfile.json
