--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ license_files =
     licenses/LICENSE_dotnet_csharp-tmLanguage
     licenses/LICENSE_elixir-editors_elixir-tmbundle
     licenses/LICENSE_fadeevab_make.tmbundle
-    licenses/LICENSE_hashicorp_vscode-terraform
+    licenses/LICENSE_hashicorp_syntax
     licenses/LICENSE_ionide_ionide-fsgrammar
     licenses/LICENSE_jeff-hykin_better-c-syntax
     licenses/LICENSE_jeff-hykin_better-cpp-syntax
@@ -89,6 +89,8 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.fsharp.json
     share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.haskell.json
+    share/babi/grammar_v1/source.hcl.json
+    share/babi/grammar_v1/source.hcl.terraform.json
     share/babi/grammar_v1/source.ini.json
     share/babi/grammar_v1/source.java.json
     share/babi/grammar_v1/source.js.json
@@ -122,7 +124,6 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.sql.json
     share/babi/grammar_v1/source.starlark.json
     share/babi/grammar_v1/source.swift.json
-    share/babi/grammar_v1/source.terraform.json
     share/babi/grammar_v1/source.toml.json
     share/babi/grammar_v1/source.ts.json
     share/babi/grammar_v1/source.tsx.json
