--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ license_files =
     licenses/LICENSE_textmate_swift.tmbundle
     licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_trond-snekvik_vscode-rst
+    licenses/LICENSE_ziglang_vscode-zig
 classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
@@ -130,6 +131,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.x86.json
     share/babi/grammar_v1/source.x86_64.json
     share/babi/grammar_v1/source.yaml.json
+    share/babi/grammar_v1/source.zig.json
     share/babi/grammar_v1/text.git-commit.json
     share/babi/grammar_v1/text.git-rebase.json
     share/babi/grammar_v1/text.html.basic.json
