Added syntax highlighting of meson.build files

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ license_files =
     licenses/LICENSE_Dart-Code_Dart-Code
     licenses/LICENSE_MagicStack_MagicPython
     licenses/LICENSE_PowerShell_EditorSyntax
+    licenses/LICENSE_TingPing_language-meson
     licenses/LICENSE_WhereIsX_vscode-crystal-lang
     licenses/LICENSE_Xoronic_pest-Syntax-Highlighting-for-vscode
     licenses/LICENSE_alefragnani_vscode-language-pascal
@@ -100,6 +101,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.kotlin.json
     share/babi/grammar_v1/source.lua.json
     share/babi/grammar_v1/source.makefile.json
+    share/babi/grammar_v1/source.meson.json
     share/babi/grammar_v1/source.nim.json
     share/babi/grammar_v1/source.nimble.json
     share/babi/grammar_v1/source.objc.json
