Add grammar file for Coffeescript

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.bazel.json
     share/babi/grammar_v1/source.bazelrc.json
     share/babi/grammar_v1/source.c.json
+    share/babi/grammar_v1/source.coffee.json
     share/babi/grammar_v1/source.cpp.embedded.macro.json
     share/babi/grammar_v1/source.cpp.json
     share/babi/grammar_v1/source.crystal.json
