add jsonnet syntax

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ license_files =
     licenses/LICENSE_dotnet_csharp-tmLanguage
     licenses/LICENSE_elixir-editors_elixir-tmbundle
     licenses/LICENSE_fadeevab_make.tmbundle
+    licenses/LICENSE_grafana_vscode-jsonnet
     licenses/LICENSE_hashicorp_syntax
     licenses/LICENSE_ionide_ionide-fsgrammar
     licenses/LICENSE_jeff-hykin_better-c-syntax
@@ -99,6 +100,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
     share/babi/grammar_v1/source.json.json
+    share/babi/grammar_v1/source.jsonnet.json
     share/babi/grammar_v1/source.kotlin.json
     share/babi/grammar_v1/source.lua.json
     share/babi/grammar_v1/source.makefile.json
