--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ license_files =
     licenses/LICENSE_dotnet_csharp-tmLanguage
     licenses/LICENSE_elixir-editors_elixir-tmbundle
     licenses/LICENSE_fadeevab_make.tmbundle
+    licenses/LICENSE_gleam-lang_vscode-gleam
     licenses/LICENSE_grafana_vscode-jsonnet
     licenses/LICENSE_hashicorp_syntax
     licenses/LICENSE_ionide_ionide-fsgrammar
@@ -91,6 +92,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.dockerfile.json
     share/babi/grammar_v1/source.elixir.json
     share/babi/grammar_v1/source.fsharp.json
+    share/babi/grammar_v1/source.gleam.json
     share/babi/grammar_v1/source.go.json
     share/babi/grammar_v1/source.haskell.json
     share/babi/grammar_v1/source.hcl.json
