--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,9 @@
+exclude: ^testdata/
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
     -   id: trailing-whitespace
-        exclude: ^testdata/source_diff$
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: debug-statements
