--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ license_files =
     licenses/LICENSE_grafana_vscode-jsonnet
     licenses/LICENSE_hashicorp_syntax
     licenses/LICENSE_ionide_ionide-fsgrammar
+    licenses/LICENSE_jaseci-labs_jaseci
     licenses/LICENSE_jeff-hykin_better-c-syntax
     licenses/LICENSE_jeff-hykin_better-cpp-syntax
     licenses/LICENSE_jeff-hykin_better-go-syntax
@@ -96,6 +97,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.hcl.json
     share/babi/grammar_v1/source.hcl.terraform.json
     share/babi/grammar_v1/source.ini.json
+    share/babi/grammar_v1/source.jac.json
     share/babi/grammar_v1/source.java.json
     share/babi/grammar_v1/source.js.json
     share/babi/grammar_v1/source.js.jsx.json
