add proto highlighter

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ license_files =
     licenses/LICENSE_textmate_toml.tmbundle
     licenses/LICENSE_trond-snekvik_vscode-rst
     licenses/LICENSE_ziglang_vscode-zig
+    licenses/LICENSE_zxh0_vscode-proto3
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
@@ -119,6 +120,7 @@ share/babi/grammar_v1 =
     share/babi/grammar_v1/source.pestfile.json
     share/babi/grammar_v1/source.php.json
     share/babi/grammar_v1/source.powershell.json
+    share/babi/grammar_v1/source.proto.json
     share/babi/grammar_v1/source.puppet.json
     share/babi/grammar_v1/source.python.json
     share/babi/grammar_v1/source.r.json
